# media-toc-player

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  org.fengalin.media-toc-player.json
assets/ui/: media-toc-player.ui  ui.gresource.xml
ci/: before_install.sh
flatpak/: org.fengalin.media-toc-player.json
po/: .gitignore  POTFILES.in  es.po  fr.po  media-toc-player.pot  update
res/: org.fengalin.media-toc-player.desktop
res/ui/: media-toc-player.ui
src/: main.rs
src/application/: command_line.rs  configuration.rs  mod.rs
src/media/: context.rs  media_info.rs  mod.rs  playback_pipeline.rs  timestamp.rs
src/metadata/: duration.rs  factory.rs  format.rs  media_info.rs  mkvmerge_text_format.rs  mod.rs  timestamp.rs  timestamp_4_humans.rs  toc_visitor.rs
src/ui/: chapter_tree_manager.rs  image.rs  info_bar_controller.rs  info_controller.rs  info_dispatcher.rs  main_controller.rs  main_dispatcher.rs  media-toc-player.ui  mod.rs  perspective_controller.rs  perspective_dispatcher.rs  streams_controller.rs  streams_dispatcher.rs  ui_event.rs  video_controller.rs  video_dispatcher.rs
