[package]
authors = ["François Laignel <fengalin@free.fr>"]
build = "build.rs"
description = "A media player with a table of contents"
edition = '2018'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-player"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc-player"
version = "0.1.99"

[dependencies]
cairo-rs = "0.7"
clap = "2"
directories = "2"
env_logger = "0.6"
gdk = "0.11"
gettext-rs = { version = "0.4", features = ["gettext-system"] }
gio = "0.7"
glib = "0.8"
gstreamer = { version = "0.14", features = ["v1_10"] }
gtk = { version = "0.7", features = ["v3_18"] }
image = "0.21"
lazy_static = "1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
nom = "4.2"
ron = "0.5"
serde = "1"
serde_derive = "1"

[build-dependencies]
directories = "2"

